# ITCR.DatosII.ProyectoI

./: Diagrama C!ng  Doxyfile
Client/: CMakeLists.txt  Client.pro  Client.pro.user.a43068a  Client.pro.user.c458ea5  Client.pro.user.e8c2474  clientsends.cpp  clientsends.h  main.cpp  optional.h  optional.hpp  test.myc  widget.cpp  widget.h  widget.ui
Client/Interpreter/: Interpreter.cpp  Interpreter.h
Client/Structure/: Declarations.cpp  Declarations.h  FuncDefinition.cpp  FuncDefinition.h
Client/Tokens/: Tokenizer.cpp  Tokenizer.h
Client/Types/: VarTypes.cpp  VarTypes.h
Server/: Server.pro  Server.pro.user.a43068a  Server.pro.user.c458ea5  main.cpp  memoryblock.cpp  memoryblock.h  server.cpp  server.h  serverConnect.cpp  serverConnect.h  serverInterface.cpp  serverInterface.h  serverSends.cpp  serverSends.cpp.autosave  serverSends.h  serverwindow.cpp  serverwindow.h  widget.cpp  widget.h  widget.ui
build-Client-Desktop-Debug/: Client  Makefile  moc_widget.cpp  ui_widget.h
build-Client-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-Server-Desktop-Debug/: Makefile  Makefile.Debug  Makefile.Release  QtSimpleChatServer  Server  moc_server.cpp  moc_widget.cpp  ui_serverwindow.h  ui_widget.h
build-Server-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
html/: _client_2main_8cpp.html  _declarations_8cpp.html  _declarations_8h.html  _declarations_8h_source.html  _func_definition_8cpp.html  _func_definition_8h.html  _func_definition_8h_source.html  annotated.html  (+72 more)
(+49 files in other folders)
